# SmartCurtain-Frontend

./: .gitignore  Makefile  README.md
.github/workflows/: UpdateParent.yaml  UpdateParentsSubmodule.yaml
Source/: Dockerfile  Frontend.py  Global.py  IdMapping.json  Requirements.txt  pyproject.toml  tsconfig.json
Source/HTML/Scripts.ts/Area/EditEvent.j2/: Header.ts  Scripts.ts  Types.d.ts
Source/HTML/Scripts.ts/Components/NewEventModal.j2/: Header.js  Header.ts  Scripts.js  Scripts.ts  Types.d.ts
Source/HTML/Scripts.ts/Header.j2/: Scripts.ts
Source/HTML/Static/TemplatesJS/Components/NewEventModal/: Header.ts  Scripts.ts  Types.d.ts
Source/HTML/Templates/: Header.j2  NewEventModal.j2
Source/HTML/Templates/Area/: EditEvent.j2  Index.j2
Source/HTML/Templates/Components/: EventList.j2  NewEventModal.j2  OptionList.j2
Source/HTML/Templates/Curtain/: EditEvent.j2  Index.j2
Source/HTML/Templates/Home/: Index.j2
Source/HTML/Templates/Room/: Index.j2
Source/Routes/: Curtain.py  Home.py  Room.py  Root.py  __init__.py
