[build-system]
requires = [
	"httpx>= 0.25.0",
	"mpzinke>=0.7.5",
	"requests>=2.28.1"
]
build-backend = "setuptools.build_meta"


# FROM: https://stackoverflow.com/a/72547402
[tool.setuptools]
py-modules = []


[project]
name = "SmartCurtain-Frontend"
version = "0.9.0"
authors = [{name="Mathew Zinke"}]
description = """The frontend for SmartCurtain, a program to automate curtains."""
dependencies = [
	"httpx>= 0.25.0",
	"mpzinke>=0.7.5",
	"requests>=2.28.1"
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/MPZinke/SmartCurtain-Frontend"
"Bug Tracker" = "https://github.com/MPZinke/SmartCurtain-Frontend/issues"
